Add firewalld and update def vars
Default Listen vars now use facts.
using allow-recursion for cache access.
firewalld rule added

--- a/roles/bind/templates/recursive-named.conf.j2
+++ b/roles/bind/templates/recursive-named.conf.j2
@@ -18,13 +18,12 @@ options {
 	directory "{{ datapath }}";
 	listen-on { 127.0.0.1; {{ ListenV4 }} };
 	listen-on-v6 { ::1; {{ ListenV6 }} };
-	allow-new-zones yes;
 	#dnssec-validation auto;
 	allow-query {
 		trusted;
 		clients;
 	};
-	allow-query-cache {
+	allow-recursion {
 		trusted;
 		clients;
 	};
