Update primary zone file
Readme additions
create directories and files for primary domains

--- a/roles/bind/templates/primary-named.conf.j2
+++ b/roles/bind/templates/primary-named.conf.j2
@@ -41,6 +41,7 @@ options {
   zone-statistics full;
   allow-transfer {
     trusted;
+    xfer;
     {% if primary_masters_list %}
       {% for name, addresses in primary_masters_list.items() %}
     "{{ name }}-acl";
