--- a/roles/bind/templates/example.com.db.j2
+++ b/roles/bind/templates/example.com.db.j2
@@ -12,7 +12,7 @@ $TTL {{ default_ttl }}
 @               IN      NS      ns3
 @               IN      NS      ns4
 ; MX record for this zone
-@               IN      MX      mail
+@               IN      MX   10 mail
 
 ; Address records go here
 ns1             IN      A      127.0.0.1
