--- a/roles/bind/templates/example.com.db.j2
+++ b/roles/bind/templates/example.com.db.j2
@@ -1,11 +1,13 @@
 ; Primary Zone file template
 $TTL {{ default_ttl }}
+/*
 @       IN      SOA     ns1 {{ soa_root_email }}.  (
-                                      {{ soa_values.serial }}
+                            
                                       {{ soa_values.refresh }}
                                       {{ soa_values.retry }}
                                       {{ soa_values.expire }}
-                                      {{ soa_values.minimum }} )
+                                      {{ soa_values.minimum }} )*/
+$INCLUDE {{ item.name }}.serial
 ; Name server records for this zone. ****Note not fully qualified****
 @               IN      NS      ns1
 @               IN      NS      ns2
