--- a/roles/bind/templates/example.com.db.j2
+++ b/roles/bind/templates/example.com.db.j2
@@ -2,7 +2,7 @@
 $TTL {{ default_ttl }}
 /*
 @       IN      SOA     ns1 {{ soa_root_email }}.  (
-                            
+
                                       {{ soa_values.refresh }}
                                       {{ soa_values.retry }}
                                       {{ soa_values.expire }}
@@ -23,3 +23,4 @@ ns3             IN      A      127.0.0.3
 ns4             IN      A      127.0.0.4
 
 mail            IN      AAAA   fd01:1:1:1::100
+@               IN      TXT     "This is a text record"
