--- a/roles/bind/templates/example.com.db.j2
+++ b/roles/bind/templates/example.com.db.j2
@@ -17,4 +17,4 @@ ns3             IN      A      127.0.0.3
 ns4             IN      A      127.0.0.4
 
 mail            IN      AAAA   fd01:1:1:1::100
-@               IN      TXT     "This is a text record"
+@               IN      TXT     "This is a text record at the apex"
