Default Zone statement fix
Changed simple zone statement template to support dynamic and static zone types. no longer need to create dedicate statement file for zones without additional configuration details

--- a/roles/bind/templates/simple.zone.conf.j2
+++ b/roles/bind/templates/simple.zone.conf.j2
@@ -3,6 +3,8 @@ zone "{{ item.name }}" IN {
   file "pri/{{ item.name }}/{{ item.name }}.db";
   //also-notify ;
   allow-query { any; };
+  {% if not item.isstatic %}
   update-policy local;
+  {% endif %}
   key-directory "pri/{{ item.name }}/keys";
 };
