--- a/roles/bind/templates/primary-named.conf.j2
+++ b/roles/bind/templates/primary-named.conf.j2
@@ -92,7 +92,8 @@ statistics-channels {
 };
 include "{{ confpath }}/rndc.key";
 controls {
-	inet 127.0.0.1 port 953 allow { 127.0.0.1/32; ::1/128; } keys { "rndc-key"; };
+	inet 127.0.0.1 port 953 allow { 127.0.0.1/32; } keys { "rndc-key"; };
+  inet ::1 port 953 allow { ::1/128; } keys { "rndc-key"; };
 };
 
 {% for domain in pri_domains %}
