--- a/roles/bind/templates/recursive-named.conf.j2
+++ b/roles/bind/templates/recursive-named.conf.j2
@@ -87,7 +87,8 @@ statistics-channels {
 	inet {{ ListenStatsV6 }} port 8880 allow {trusted;};
 	{% endif %}
 };
-include "/{{ confpath }}/rndc.key";
+include "{{ confpath }}/rndc.key";
 controls {
-	inet 127.0.0.1 port 953 allow { 127.0.0.1/32; ::1/128; } keys { "rndc-key"; };
+  inet 127.0.0.1 port 953 allow { 127.0.0.1/32; } keys { "rndc-key"; };
+  inet ::1 port 953 allow { ::1/128; } keys { "rndc-key"; };
 };
