--- a/roles/bind/templates/primary.db.j2
+++ b/roles/bind/templates/primary.db.j2
@@ -16,3 +16,7 @@ ns1             IN      A      127.0.0.1
 ns2             IN      A      127.0.0.2
 ns3             IN      A      127.0.0.3
 ns4             IN      A      127.0.0.4
+
+; Restrict who can allocate certificates to this domain
+{{ item.name }}.    IN      CAA 0 iodef "mailto:{{ contact_email_certs }}"
+{{ item.name }}.		IN      CAA	0 issue "letsencrypt.org"
