bind.keys amd readme changes
Add bind.keys if recursive server.
Add static zone file template
README changes

--- a/roles/bind/templates/primary.db.j2
+++ b/roles/bind/templates/primary.db.j2
@@ -1,4 +1,4 @@
-; Primary Zone file template
+; Primary Zone file template for dynamic zones
 $TTL {{ default_ttl }}
 @       IN      SOA     ns1 {{ soa_root_email }}.  (
                                       {{ soa_values.serial }}
