--- a/roles/bind/templates/simple.zone.j2
+++ b/roles/bind/templates/simple.zone.j2
@@ -3,7 +3,7 @@ zone "{{ item.name }}" IN {
   file "pri/{{ item.name }}/{{ item.name }}.db";
   //also-notify ;
   allow-query { any; };
-  {% if item.isstatic == 'no' %}
+  {% if item.zonetype == 'dyn' %}
   update-policy local;
     {% if item.dnssec_policy %}
   dnssec-policy "{{ item.dnssec_policy }}";
