--- a/roles/bind/templates/recursive-named.conf.j2
+++ b/roles/bind/templates/recursive-named.conf.j2
@@ -85,7 +85,7 @@ logging {
 	category rpz { rpz_log; };
 };
 statistics-channels {
-	inet 127.0.0.1 port 8880 allow {trusted;};
+	/* inet 127.0.0.1 port 8880 allow {trusted;}; */
 	{% if ListenStatsV4 %}
 	inet {{ ListenStatsV4 }} port 8880 allow {trusted;};
 	{% endif %}
