--- a/roles/bind/templates/basic_rpz.db.j2
+++ b/roles/bind/templates/basic_rpz.db.j2
@@ -1,11 +1,6 @@
 ; Simple RPZ file that can be used as a guide.
 $TTL  1H
-@       SOA LOCALHOST. {{ rpz_soa_contact }} (
-                                      {{ soa_values.serial }}
-                                      {{ soa_values.refresh }}
-                                      {{ soa_values.retry }}
-                                      {{ soa_values.expire }}
-                                      {{ soa_values.minimum }} )
+$INCLUDE rpz/{{ policy }}.serial
     NS localhost.
 ; Simple block rules for domains you never want resolved
 {% if rpz_block_domains is defined %}
