--- a/templates/recursive-named.conf.j2
+++ b/templates/recursive-named.conf.j2
@@ -16,11 +16,11 @@ options {
 	directory "{{ datapath }}";
 	listen-on { 127.0.0.1; {{ ListenV4 }} };
 	listen-on-v6 { ::1; {{ ListenV6 }} };
-	#dnssec-validation auto;
 	allow-query {
 		trusted;
 		clients;
 	};
+  dnssec-validation auto;
 	allow-recursion {
 		trusted;
 		clients;
