--- a/templates/basic_rpz.db.j2
+++ b/templates/basic_rpz.db.j2
@@ -1,7 +1,7 @@
 ; Simple RPZ file that can be used as a guide.
 $TTL  1H
 $INCLUDE rpz/{{ item }}.serial
-    NS localhost.
+@    NS localhost.
 ; Simple block rules for domains you never want resolved
 {% if rpz_block_domains is defined %}
 {% for domain in rpz_block_domains %}
