--- a/templates/primary-named.conf.j2
+++ b/templates/primary-named.conf.j2
@@ -108,7 +108,7 @@ controls {
   inet ::1 port 953 allow { ::1/128; } keys { "rndc-key"; };
 };
 /* Add any DNSSEC policies here. Directories must exist and be writable for BIND process*/
-/* disabling dnssec-policy until more functionality is added.
+/* disabling dnssec-policy until more functionality is added. */
 dnssec-policy "simple" {
   dnskey-ttl 3600;
   keys {
@@ -123,11 +123,11 @@ dnssec-policy "simple" {
   signatures-refresh P7D;
   signatures-validity P4W;
   signatures-validity-dnskey P4W;
-  zone-max-ttl PT48H;
+  max-zone-ttl PT48H;
   zone-propagation-delay PT1H;
 
 };
-*/
+
 {% for domain in pri_domains %}
 include "{{ confpath }}/{{ domain.name }}.zone.conf";
 {% endfor %}
