Directory and naming cleanup
-New vars for zone subdir path.
-Changes to some vars and options to use 'primary/secondary' instead of 'master/slave' This mirrors ISC config and document changes.

--- a/templates/secondary.zone.j2
+++ b/templates/secondary.zone.j2
@@ -1,6 +1,6 @@
 zone "{{ domain.name }}" IN {
   type secondary;
-  file "sec/{{ domain.name }}/{{ domain.name }}.db";
+  file "{{ secondary_zone_subdir }}/{{ domain.name }}/{{ domain.name }}.db";
   masters { {{ domain.masters }} };
   allow-query { any; };
 };
