--- a/templates/primary-named.conf.j2
+++ b/templates/primary-named.conf.j2
@@ -89,6 +89,7 @@ logging {
 	category general { default_log; };
 	category queries { query_log; };
 	category update { update_log; };
+  category xfer-out { xfers_log; }; 
 };
 statistics-channels {
 	/* inet 127.0.0.1 port 8880 allow {trusted;}; */
