--- a/templates/secondary-named.conf.j2
+++ b/templates/secondary-named.conf.j2
@@ -17,11 +17,17 @@ acl "trusted" {
 };
 
 {% if secondary_masters_list %}
-  {% for master in secondary_masters_list %}
+  {%- for master in secondary_masters_list -%}
 masters "{{ master.name }}-master-list" {
-  {{ master.addresses }}
+  {% for address in master.addresses %}
+  {%- if master.key is defined -%}
+  {{ address }} key {{master.key}};
+  {% else %}
+  {{ address }};
+  {% endif %}
+  {%- endfor -%}
 };
-  {% endfor %}
+  {%- endfor -%}
 {% endif %}
 
 options {
