fixed comment marker

--- a/templates/primary-named.conf.j2
+++ b/templates/primary-named.conf.j2
@@ -118,7 +118,7 @@ dnssec-policy "simple" {
   };
   parent-ds-ttl P1D;
   parent-propagation-delay PT1H;
-  /* The option below is deprecated. use `rndc dnssec -checkds` instead.
+  /* The option below is deprecated. use `rndc dnssec -checkds` instead. */
   //parent-registration-delay P1D;
   publish-safety PT4H;
   retire-safety PT4H;
