add update to dnstap

--- a/templates/primary-named.conf.j2
+++ b/templates/primary-named.conf.j2
@@ -44,7 +44,8 @@ options {
   serial-update-method unixtime; /* Zones will be signed. Mucking around with manual serials is too much trouble */
   /* This dnstap configuration is designed to assist with server troubleshooting.*/
   dnstap {
-    auth;
+    auth; 
+    update;
   };
   dnstap-output file "{{ logpath }}/dnstap-output" size 100M versions 5 suffix increment;
   zone-statistics full;
