--- a/templates/recursive-named.conf.j2
+++ b/templates/recursive-named.conf.j2
@@ -2,6 +2,25 @@
 {{ generatedby }}
 */
 
+{% if isc_bind_tls  is defined %}
+// All tls statements, regardless of purpose, go here.
+{% for TLS in isc_bind_tls %}
+{% if TLS.file is defined %}
+// included tls configuration file
+include "{{ TLS.file }}";
+{% elif TLS.name != 'ephemeral' %}
+tls {{ TLS.name }} {
+	cert-file "{{TLS.cert}}";
+	key-file "{{TLS.key}}";
+	hostname "{{TLS.hostname}}";
+	protocols "TLSv1.3;"; // syntax subject to change. refer to version specific BIND ARM if this fails.
+	ciphers "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256";
+};
+{% endif %}
+{% endfor %}
+{% endif %}
+
+
 acl "trusted" {
 	127.0.0.0/8;
 	::1/128;
@@ -19,11 +38,27 @@ masters "{{ feed.name }}-master-list" {
   {% endfor %}
 {% endif %}
 
+{% if isc_bind_tls  is defined %}
+// HTTP is present only if isc_bind_tls  is defined
+http simple {
+	endpoints { "/dns-query"; };
+};
+{% endif %}
 
 options {
 	directory "{{ datapath }}";
 	listen-on { 127.0.0.1; {{ ListenV4 }} };
 	listen-on-v6 { ::1; {{ ListenV6 }} };
+{% if isc_bind_tls  is defined %}
+{% for TLS in isc_bind_tls %}
+{% if TLS.listen %}
+	listen-on port 853 tls {{ TLS.name }} {127.0.0.1; {{ ListenV4 }} };
+	listen-on-v6 port 853 tls {{ TLS.name }} { ::1; {{ ListenV6 }} };
+
+{% endif %}
+{% endfor %}
+{% endif %}
+
 	allow-query {
 		trusted;
 		clients;
