--- a/templates/recursive-named.conf.j2
+++ b/templates/recursive-named.conf.j2
@@ -13,8 +13,8 @@ tls {{ TLS.name }} {
 	cert-file "{{TLS.cert}}";
 	key-file "{{TLS.key}}";
 	hostname "{{TLS.hostname}}";
-	protocols "TLSv1.3;"; // syntax subject to change. refer to version specific BIND ARM if this fails.
-	ciphers "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256";
+	protocols { TLSv1.3; }; // syntax subject to change. refer to version specific BIND ARM if this fails.
+	
 };
 {% endif %}
 {% endfor %}
